tests/should_fail/match_expr_non_enum.nv
module main

// SHOULD FAIL: match expression on non-enum type
let x = 42
let y = match x {
    _ => "hello"
}
